--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "antd": "^4.18.9",
     "axios": "^0.26.1",
     "framer-motion": "^6.2.8",
+    "lodash.debounce": "^4.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
